--- a/app/globals.css
+++ b/app/globals.css
@@ -30,6 +30,20 @@ body {
   }
 }
 
+@media screen and (max-width: 700px) {
+  .splide__arrow--prev {
+    left: 1em !important;
+    background-color: silver !important;
+    margin-top: -2rem;
+  }
+
+  .splide__arrow--next {
+    right: 1em !important;
+    background-color: silver !important;
+    margin-top: -2rem;
+  }
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
