--- a/app/components/Landing/landing.module.scss
+++ b/app/components/Landing/landing.module.scss
@@ -40,7 +40,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("/landing_gradinet.jpg") no-repeat top;
+  background: url("https://res.cloudinary.com/dano2nyff/image/upload/v1699376015/oueuanu7obcliukv5oe2.jpg")
+    no-repeat top;
   // background-size: contain;
   // background-size: cover;
   // overflow: hidden;
