--- a/app/components/Landing/landing.module.scss
+++ b/app/components/Landing/landing.module.scss
@@ -15,6 +15,7 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font: bold;
+  // font-size: 3rem;
 }
 
 .aboutText {
