--- a/app/components/About/about.module.scss
+++ b/app/components/About/about.module.scss
@@ -18,13 +18,15 @@
   // -webkit-transition: all 0.3s ease-in-out;
   // transition: all 0.3s ease-in-out;
   // font-size: 0.9rem;
-  border-radius: 20px;
-  color: #fff;
-  border: 1px double transparent;
-  background-image: linear-gradient(#0d0e21, #0d0e21),
-    radial-gradient(circle at left top, #016eda, #d900c0);
+  border-radius: 10px;
+  color: black;
+  font: bold;
+  // border: 2px double transparent;
+  // background-image: linear-gradient(#0d0e21, #0d0e21),
+  //   radial-gradient(circle at left top, #016eda, #d900c0);
+  background-color: white;
   background-origin: border-box;
   background-clip: padding-box, border-box;
-  background-color: transparent;
+  // background-color: transparent;
   // padding: 0.2rem 0.5rem;
 }
